# GINO

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GITLAB_SETUP.md
src/gino/: __main__.py  main.py
src/gino/core/: game.py  settings.py
src/gino/scenes/: base.py  start_menu.py
