[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gino-game"
version = "0.1.0"
description = "GINO - Game Is Not Over, a PyGame roguelite lab project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame==2.6.0",
]

[project.scripts]
gino = "gino.main:main"

[tool.setuptools.packages.find]
where = ["src"]
